--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
                 <version>${springfox-swagger-ui.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.6</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
